server/scss/_mixins.scss
/* CENTERING */
@mixin ver-hor-center {
  display: flex;
  justify-content: center;
  align-items: center;
}

@mixin env-btn-styles {
  color: inherit;
  font-family: $title-font;
  text-decoration: none;
  height: 30px;
  padding-top: 5px;
}

@mixin flex-clear {
  display: block;
  flex: 0;
}

/* INPUTS */
@mixin form-input {
  border-color: $gray1;
  border-width: 0 0 2px 0;
  background-color: transparent;
  outline: 0;

  &:focus {
    border-color: $green;
  }
}

/* Avatar display */
@mixin avatar-size {
  background-color: #fff;
  border-radius: 50%;
  height: 70px;
  padding: 5px;
  width: 70px;
}

@mixin message-container-styles {
  padding: 15px 25px;
  position: relative;
}

@mixin bubble-chat-styles($bubble-color) {
  background-color: $bubble-color;
  border-radius: 2px;
  margin-bottom: 0;
  margin-top: 0;
  padding: $space $space 0.5*$space $space;
  position: relative;
  width: 65%;

  //Triangle on chat bubble
  &:after {
    top: -10px;
    border-width: 10px;
    border-style: solid;
    border-color: transparent $bubble-color $bubble-color transparent;
    content: "";
    position: absolute;
    -moz-transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
  }
}

@mixin chat-avatar {
  border-radius: 50%;
  border: 2px solid #FFF;
  position: absolute;
  max-height: 60px;
  max-width: 60px;
}
/* ... */

